[gd_scene load_steps=3 format=3 uid="uid://c13yqxy3fld4j"]

[ext_resource type="Script" uid="uid://0flhltfibu0s" path="res://ui/hud/quest/quest_list_item.gd" id="1_43byw"]
[ext_resource type="Texture2D" uid="uid://dswnlmaeo8t3o" path="res://icon.svg" id="1_yrjcp"]

[node name="QuestListItem" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_43byw")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="QuestTypeIcon" type="TextureRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("1_yrjcp")

[node name="TitleLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "任務標題"

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatusLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "任務狀態，如：進行中"
